# mow-metrics

./: .gitignore  README.md  app.py  fetch_and_predict.py  plan-v0.md  pyproject.toml  requirements.txt
.github/workflows/: keep_awake.yml  weather_check.yml
docs/: roadmap.md
docs/superpowers/plans/: 2026-04-24-mow-metrics-v1.md  2026-05-01-backfill-dashboard.md  2026-05-01-rainfall-timing-saturation.md
docs/superpowers/specs/: 2026-04-24-mow-metrics-design.md  2026-05-01-backfill-dashboard-design.md  2026-05-01-rainfall-timing-saturation-design.md
src/mow_metrics/: __init__.py  config.py  models.py  seasonality.py  sheets.py  weather.py
tests/: test_app_logic.py  test_config.py  test_docs.py  test_fetch_and_predict.py  test_seasonality.py  test_sheets.py  test_weather.py
